# test-hackathon

./: .gitignore  README.md
backend/: config.json  db.sqlite3  pyproject.toml
backend/api/: admin.py  mail.py  models.py  serializers.py  urls.py  views.py
backend/api/db/: db_fn.py  fbstr.py  fbtut.py  serviceAccountKey.json  test.py  try_mailjet2.py
backend/api/migrations/: 0002_alter_videos_created_at.py
backend/env/: pyvenv.cfg
backend/website/: settings.py  urls.py
lol/: db.sqlite3  pyproject.toml
lol/api/: models.py  urls.py  views.py
lol/api/migrations/: 0001_initial.py
lol/website/: settings.py
music-app/: package-lock.json
music-app/src/: App.css  App.js  AudioControls.jsx  AudioPlayer.css  AudioPlayer.jsx
my-react-app/: node_modules  package-lock.json  package.json
my-react-app/src/: App.css  App.js  Login.jsx
my-react-app/src/pages/: Layout.js
some-app/: .gitignore  package-lock.json  package.json
some-app/public/: index.html
some-app/src/: App.css  App.js  AudioControls.jsx  AudioPlayer.css  AudioPlayer.jsx  ImgCard.jsx  tracks.js
some-app/src/assets/: songs
some-app/src/components/: AudioControls.jsx  AudioPlayer.jsx  Convert.jsx  Login.jsx  NavBar.jsx  Register.jsx  SignIn.jsx  SongItem.jsx  SongLibrary.jsx  tracks.js
some-app/src/pages/: Home.js  layout.js
some-app/src/styles/: App.css  AudioPlayer.css  SignIn.css  SongItem.css
